<!--
  ~ Copyright (C) 2018 Markus Ressel
  ~
  ~ This program is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU Affero General Public License as published
  ~ by the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU Affero General Public License for more details.
  ~
  ~ You should have received a copy of the GNU Affero General Public License
  ~ along with this program.  If not, see <http://www.gnu.org/licenses/>.
  -->

<resources>
    <string name="app_name" translatable="false">k4ever</string>

    <string name="wizard_page_welcome_title">Welcome!</string>
    <string name="wizard_page_welcome_description">The fast and easy way to buy products at Freitagsrunde.</string>

    <string name="wizard_page_login_title">Login</string>
    <string name="wizard_page_login_description">Provide your personal credentials to access k4ever. If do not have any yet, please contact a member of Freitagsrunde.</string>
    <string name="wizard_page_login_url_hint" translatable="false">https://k4ever.freitagsrunde.org/api/v1/</string>
    <string name="wizard_page_login_hint_username" translatable="false">g_myuser</string>
    <string name="wizard_page_login_hint_password" translatable="false">top!secret91</string>

    <string name="menu_item_products">Products</string>
    <string name="menu_item_account">Account</string>
    <string name="menu_item__money_transfer">Money Transfer</string>
    <string name="menu_item_settings">Settings</string>
    <string name="menu_item_about">About</string>

    <string name="favorite">Favorite</string>
    <string name="checkout">Checkout</string>

    <string name="name">Name</string>
    <string name="overview">Overview</string>
    <string name="balance_history">Balance</string>
    <string name="withdraw_money">Withdraw</string>
    <string name="deposit_money">Deposit</string>

    <string name="withdrawal">Withdrawal</string>
    <string name="deposition">Deposition</string>

    <string name="account_balance" translatable="false">%1$.2f€</string>

    <string name="shopping_cart__total_items_and_cost">%1$d items (%2$.2f€)</string>
    <string name="shopping_cart__item_cost" translatable="false">%1$.2f€</string>

    <string name="refresh">Refresh</string>
    <string name="sort_order">Sort order</string>
    <string name="search">Search</string>
    <string name="filter">Filter</string>

    <string name="show_deposit_withdrawals">Deposits/Withdrawals</string>
    <string name="show_purchases">Purchases</string>
    <string name="show_transfers">Money Transfers</string>

    <string name="details">Details</string>

    <string name="add_to_cart">Add to cart</string>
    <string name="with_deposit">with deposit</string>
    <string name="without_deposit">without deposit</string>
    <string name="product_added_to_cart">Product was added to the shopping cart</string>

    <string name="product_details">Product Details</string>

    <string name="no_items_found">No items found</string>

    <string name="description">Description</string>
    <string name="date">Date</string>
    <string name="price">Price</string>
    <string name="deposit">Deposit</string>
    <string name="barcode">Barcode</string>

    <string name="sender">Sender</string>
    <string name="recipient">Recipient</string>
    <string name="amount">Amount</string>

    <string name="products">Products</string>

    <string name="hint__money_transfer__recipient">Enter username…</string>
    <string name="hint__money_transfer__description">Pizza order 🍕</string>

    <string name="currency_symbol__euro" translatable="false">€</string>

    <string name="send">Send</string>

    <string name="error">Error</string>
    <string name="exception_raised">Exception raised</string>
    <string name="unknown_error">Unknown Error</string>
    <string name="retry">Retry</string>
</resources>
