<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (C) 2018 Markus Ressel
  ~
  ~ This program is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU Affero General Public License as published
  ~ by the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU Affero General Public License for more details.
  ~
  ~ You should have received a copy of the GNU Affero General Public License
  ~ along with this program.  If not, see <http://www.gnu.org/licenses/>.
  -->

<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <include layout="@layout/material_view_pager_placeholder" />

        <androidx.cardview.widget.CardView
            style="@style/detail_content_cardview"
            android:layout_width="wrap_content">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:minWidth="400dp"
                android:orientation="vertical"
                android:padding="16dp">

                <TextView
                    style="@style/detail_item_section"
                    android:text="@string/add_to_cart" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/addToCartWithDeposit"
                        style="@style/outlined_button"
                        android:text="@string/with_deposit" />

                    <Button
                        android:id="@+id/addToCartWithout"
                        style="@style/outlined_button"
                        android:text="@string/without_deposit" />

                </LinearLayout>

                <TextView
                    style="@style/detail_item_section"
                    android:text="@string/product_details" />

                <TextView
                    style="@style/detail_item_header"
                    android:text="@string/name" />

                <TextView
                    android:id="@+id/productName"
                    style="@style/detail_item_content_textview" />

                <TextView
                    style="@style/detail_item_header"
                    android:text="@string/description" />

                <TextView
                    android:id="@+id/productDescription"
                    style="@style/detail_item_content_textview"
                    android:maxWidth="400dp" />

                <TextView
                    style="@style/detail_item_header"
                    android:text="@string/price" />

                <TextView
                    android:id="@+id/productPrice"
                    style="@style/detail_item_content_textview" />

                <TextView
                    style="@style/detail_item_header"
                    android:text="@string/deposit" />

                <TextView
                    android:id="@+id/productDeposit"
                    style="@style/detail_item_content_textview" />

                <TextView
                    style="@style/detail_item_header"
                    android:text="@string/barcode" />

                <TextView
                    android:id="@+id/productBarcode"
                    style="@style/detail_item_content_textview" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </LinearLayout>

</androidx.core.widget.NestedScrollView>