<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (C) 2018 Markus Ressel
  ~
  ~ This program is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU Affero General Public License as published
  ~ by the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU Affero General Public License for more details.
  ~
  ~ You should have received a copy of the GNU Affero General Public License
  ~ along with this program.  If not, see <http://www.gnu.org/licenses/>.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/search"
        android:title="@string/search"
        app:actionViewClass="android.support.v7.widget.SearchView"
        app:showAsAction="always|collapseActionView" />

    <!-- TODO: could be done using FAB ... hmmm -->
    <item
        android:id="@+id/sortOrder"
        android:title="@string/sort_order"
        app:showAsAction="ifRoom" />

    <!-- TODO: should be updated by dragging down on the list instead -->
    <item
        android:id="@+id/refresh"
        android:title="@string/refresh"
        app:showAsAction="ifRoom" />

</menu>