<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (C) 2018 Markus Ressel
  ~
  ~ This program is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU Affero General Public License as published
  ~ by the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU Affero General Public License for more details.
  ~
  ~ You should have received a copy of the GNU Affero General Public License
  ~ along with this program.  If not, see <http://www.gnu.org/licenses/>.
  -->

<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.activity.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/activity_horizontal_margin">

        <TextView
            style="@style/detail_item_header"
            android:paddingTop="8dp"
            android:text="@string/recipient" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:orientation="horizontal"
            android:paddingTop="8dp">

            <com.facebook.drawee.view.SimpleDraweeView
                android:id="@+id/recipient_avatar"
                android:layout_width="64dp"
                android:layout_height="64dp"
                app:placeholderImage="@drawable/baseline_account_circle_24px"
                app:placeholderImageScaleType="centerInside"
                app:roundAsCircle="true" />

            <AutoCompleteTextView
                android:id="@+id/recipient_searchview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="8dp" />

        </LinearLayout>

        <TextView
            style="@style/detail_item_header"
            android:paddingTop="8dp"
            android:text="@string/amount" />

        <EditText
            android:id="@+id/money_amount_edittext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:gravity="right"
            android:inputType="numberDecimal"
            android:maxLength="8"
            android:textSize="18sp" />

        <TextView
            style="@style/detail_item_header"
            android:paddingTop="8dp"
            android:text="@string/description" />

        <EditText
            android:id="@+id/message_edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|right"
            android:layout_marginTop="8dp"
            android:text="@string/send" />

    </LinearLayout>

</android.support.v4.widget.NestedScrollView>