<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (C) 2018 Markus Ressel
  ~
  ~ This program is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU Affero General Public License as published
  ~ by the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU Affero General Public License for more details.
  ~
  ~ You should have received a copy of the GNU Affero General Public License
  ~ along with this program.  If not, see <http://www.gnu.org/licenses/>.
  -->

<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".view.activity.WizardActivity"
        android:layout_gravity="center"
        app:layout_anchorGravity="center"
        android:foregroundGravity="center">

    <TextView
            android:id="@+id/login_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/wizard_page_login_title"
            android:textSize="24sp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"/>

    <TextView
            android:id="@+id/description"
            android:layout_width="wrap_content"
            android:gravity="center"
            android:layout_height="wrap_content"
            android:text="@string/wizard_page_login_description"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/login_title"/>

    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/text_input_username"
            app:layout_constraintTop_toBottomOf="@id/description"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:endIconMode="clear_text"
            android:hint="@string/wizard_page_login_hint_username"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="16dp"

            android:layout_marginEnd="16dp"
            android:layout_marginTop="16dp">

        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/text_input_edittext_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/text_input_password"
            app:layout_constraintTop_toBottomOf="@id/text_input_username"
            android:layout_width="0dp"
            app:endIconMode="clear_text"
            android:layout_height="wrap_content"
            app:passwordToggleEnabled="true"
            android:hint="@string/wizard_page_login_hint_password"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp">

        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/text_input_edittext_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"/>

    </com.google.android.material.textfield.TextInputLayout>

</androidx.constraintlayout.widget.ConstraintLayout>